Created attachment 113015 [details] repagination breaking document The attached document causes LO 4.4.0.3 (on Ubuntu 14.10) to crash during repagination when: - saving as docx format; - exporting to pdf; or - running 'Update All'. The repagination progress in the status bar gets nearly to the end and then stops. I've left it for about 30 minutes with no change. To reproduce, open the attached document in LO Writer, perform one of the above listed operations. I've also observed the same behaviour in LO 4.3.3.2. Presumably related is that using the --convert-to option in headless mode (version 4.3.5.2 on RHEL 6.6) to export to docx and pdf, I get the below output and then it appears to crash as nothing happens again for at least half an hour and the program does not terminate. Output from headless mode: (pkix_CacheCert_Add: PKIX_PL_HashTable_Add for Certs skipped: entry existed (pkix_CacheCert_Add: PKIX_PL_HashTable_Add for Certs skipped: entry existed .... [same error repeated about ten times] .... (pkix_CacheCert_Add: PKIX_PL_HashTable_Add for Certs skipped: entry existed (pkix_CacheCert_Add: PKIX_PL_HashTable_Add for Certs skipped: entry existed convert -> /home/coprod/381077-l1._natural_and_built_environments_yr_1.docx using MS Word 2007 XML
Actually, regarding the output from headless mode listed in the original issue description, the lines: (pkix_CacheCert_Add: PKIX_PL_HashTable_Add for Certs skipped: entry existed perhaps is a result of using a https:// url for the input file. The tests I performed against LO 4.4.0.3 (on Ubuntu 14.10) used the same file but a copy of it on the local file system.
Can reproduce on: * Version: 4.2.8.2 * Build ID: 48d50dbfc06349262c9d50868e5c1f630a573ebd * Version: 4.3.6.1 * Build ID: 9629686a67dd1f357477c13325e45a66f3452bb9 * Version: 4.4.0.3 * Build ID: de093506bcdc5fafd9023ee680b8c60e3e0645d7 * Locale: it_IT * Version: 4.5.0.0.alpha0+ * Build ID: 784d069cc1d9f1d6e6a4e543a278376ab483d1eb * TinderBox: Linux-rpm_deb-x86_64@46-TDF-dbg, Branch:master, Time: 2015-01-25_23:58:40 * Locale: it_IT Works on * Version 4.0.0.0.beta1 * Build ID: 87906242e87d3ddb2ba9827818f2d1416d80cc7 Set status to New. Version changed to 4.2.8.2 added regression keyword
Bibisect result from 43all: e2a9149a7723f4e00eb3cafe466e204e5da19e9c is the first bad commit commit e2a9149a7723f4e00eb3cafe466e204e5da19e9c Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com> Date: Thu Oct 17 05:01:44 2013 +0000 source-hash-2ede6c95e6481c92cc199e7d74fd36c841636304
This hang on .docx export seems to have started at the below commit Adding Cc: to caolanm@redhat.com; Could you possibly take a look at this? Thanks commit 84203fab20b7eb98f0d3667e6626f5c2139e5a7f Author: Oliver-Rainer Wittmann <orw@apache.org> AuthorDate: Mon Jul 9 15:43:44 2012 +0000 Commit: Caolán McNamara <caolanm@redhat.com> CommitDate: Sat May 11 20:52:52 2013 +0100 Resolves: #i120016# refine condition for allowing split of a table row Found by: Yan Ji, Jian Hong Cheng Patch by: Oliver-Rainer Wittmann Review by: Jian Hong Cheng (cherry picked from commit 472d5610c71b7a74e6d279d8f625cec8b41b8e81) Conflicts: sw/source/core/layout/tabfrm.cxx Change-Id: I718a0c70c12ed34c4ca3a2826f388b17a84c63e7
For a long time I've been having problems with crashes when repaginating. But evidently due to some new updates within about the last 2 weeks to version 5.0.0.0 alpha, the instances of the crashes have increased to the point that LibreOffice is unusable with one of my documents. Interestingly, I've discovered that removing both kde-integration and gnome-integration seems to have completely fixed the problem. Having either one installed by itself still caused problems, although it seems having only the gnome-integration installed will cause it to not crash quite as quickly. With neither installed, I've have repaginated and saved to pdf a number of times now on a document where it always crashed at some point, even before the recent updates to the latest master. I am running debian stable with an ati radeon video card. I had been thinking it was a problem because of the tables I'm using, but the program actually seems stable right now without any integration being used.
Also reproducible with Version: 4.4.3.2 Build ID: 88805f81e9fe61362df02b9941de8e38a9b5fd16 Locale: ru_RU and with 4.1.0.0.beta1. under Win7x64. Works OK with 4.0.6.1. Updated version and OS.
Patch submitted to gerrit: https://gerrit.libreoffice.org/15794
When loading the attached sample document and then immediately doing a page reformat, the document is still freezing with the latest master.
(In reply to David from comment #8) This won't be fixed until the patch in gerrit gets approved and merged into trunk. Then, a notice will be automatically posted here, so that testing will be possible.
Mike Kaganski committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=7ef02ac0ad217240c9adc6279f54342a066182aa tdf#89007: Fix ShouldRowKeepWithNext condition It will be available in 5.1.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Please do verify the fix; if it shakes out well - can back-port to -5-0 etc.
Migrating Whiteboard tags to Keywords: (bibisected) [NinjaEdit]