tdf#89007: Fix ShouldRowKeepWithNext condition

KeepWithNext shouldn't be applied to nested tables

Change-Id: I6df002ae7b00afa0fcf82aab584f85d9a47315eb